# adaptive-radix-tree-eval

./: .gitignore  CMakeLists.txt  SUMMARY.md
_existing/: CMakeLists.txt
_existing/include/: art.h
_existing/src/: art.cpp
bench/: bench.cpp  bench_original.c  bench_scan.c
output/_old/main_run/figures/: controlled_structural_summary.csv  realistic_perf_summary.csv
output/_old/main_run/raw/: expanded_core_realistic_sweep.csv
output/_old/node_count/figures/: menu_count_structural_summary.csv
output/_old/node_count/raw/: menu_count_zipf.csv
output/_old/range_scan/figures/: scan_summary.csv
output/_old/range_scan/raw/: scan_realistic_sweep.csv
output/main_run/figures/: controlled_perf_summary.csv  realistic_structural_summary.csv  zipf_perf_summary.csv
output/new/figures/main/: menu_count_perf_summary.csv  menu_count_structural_summary.csv
output/new/figures/scan/: scan_summary.csv
output/new/scan/: scan_realistic_all_menus.csv
output/node_count/figures/: menu_count_perf_summary.csv
output/node_count/raw/: menu_count_controlled.csv  menu_count_realistic.csv
output/old_run/raw/: core_realistic_sweep.csv  zipf_sweep.csv
output/range_scan/raw/: scan_controlled_fanout.csv
scripts/: run_benchmarks.py  run_scan_benchmarks.py  run_server_detailed_sweeps.sh
src/: art.c  art.h  art_internal.h  art_node_menu.h  art_nodes.c  art_nodes.h  node16.c  node2.c  node256.c  node32.c  node4.c  node48.c  node5.c  node64.c  node64_bitmap.c
tests/: runner.c  test_art.c  test_correctness.c
